# teaching-assistant-agent

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  plan_agente_correccion.md  pyproject.toml
.github/workflows/: ci.yml  email-grading.yml  release.yml
docker/: Dockerfile  execute_nb.py
docs/: open-source-readiness-plan.md  openclaw-integration.md  operational-security.md  release-checklist.md  release-ownership.md
docs/change-impact/: 2026-02-14-batch-grading-cli.md  2026-02-14-email-ingestion-grading.md  2026-02-15-github-actions-email-grading.md
examples/: assignment.txt  blackboard_steps.json  materials.txt  rubric.json  sample.ipynb  teams_steps.json
mvp_agent/: __init__.py  agents_sdk_client.py  batch.py  batch_cli.py  browser_assist.py  cli.py  codex_cli_client.py  email_cli.py  email_inbox.py  evaluator.py  extractor.py  llm_client.py  notebook_runner.py  render.py  review_ui.py  syllabus.py  syllabus_cli.py  utils.py  validator.py
mvp_agent/prompts/: __init__.py  evaluator_prompt.txt  syllabus_prompt.txt
mvp_agent_correccion.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
openclaw/skills/mvp_notebook_grader/: SKILL.md
scripts/: bootstrap.sh  install.sh
tests/: test_batch_cli.py  test_cli_mock.py  test_email_inbox.py  test_extractor.py  test_notebook_runner.py  test_utils.py  test_validator.py
