[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-agent-correccion"
version = "0.1.0"
description = "MVP de agente para corregir notebooks y generar feedback con nota final."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adrian Alarcon" }]
keywords = ["education", "grading", "notebooks", "llm", "teaching-assistant"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0", "build>=1.2.2", "twine>=5.1.1"]
browser = ["playwright>=1.40"]
agents = ["openai-agents"]
pdf = ["pypdf>=4.0"]
ocr = ["pdf2image>=1.17", "pytesseract>=0.3", "Pillow>=10.0"]
exec = ["nbformat>=5.9", "nbclient>=0.9"]
ui = ["flask>=3.0"]

[project.scripts]
mvp-agent = "mvp_agent.cli:main"
mvp-agent-batch = "mvp_agent.batch_cli:main"
mvp-agent-email = "mvp_agent.email_cli:main"
browser-assist = "mvp_agent.browser_assist:main"
syllabus-extract = "mvp_agent.syllabus_cli:main"
review-ui = "mvp_agent.review_ui:main"

[tool.setuptools]
packages = ["mvp_agent", "mvp_agent.prompts"]
include-package-data = true

[tool.setuptools.package-data]
mvp_agent = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
